chore(tooltip): fix z-index #23

--- a/src/package/components/tooltip/Tooltip.css
+++ b/src/package/components/tooltip/Tooltip.css
@@ -16,6 +16,7 @@
   max-height: 290px;
   text-align: left;
   user-select: none;
+  z-index: 1;
 }
 
 /**
